--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "ruzstatus",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://morebetterlabs.github.io/ruzukustatus",
   "dependencies": {
+    "gh-pages": "^1.0.0",
+    "moment": "^2.18.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
@@ -11,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
